<resources>
    <string name="app_name">General Services</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite </string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="lorem_title" translatable="false">Lorem ipsum</string>
    <string name="lorem_text" translatable="false">Lorem ipsum dolor sit amet consectetur adipisicing elit Obcaecati praesentium et Sunt quos cum enim Tenetur nemo consectetur dolorum</string>
    <string name="title_activity_profile">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_account">My Account</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="logout">LogOut</string>
    <string name="login_to_view">login to view Profile</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="done_order">Done Order</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="done">Done</string>
    <string name="order_details">Order Details</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="offered_price">offered Price</string>
    <string name="category">Category:</string>
    <string name="date">Date:</string>
    <string name="status">Status:</string>
    <string name="complete_by">complete By:</string>
    <string name="search_hint">Enter your search here</string>
    <string name="login_to_view_history">Login To View History</string>
    <string name="go_to_login">Go To login</string>
    <string name="login_to_view_favourite">Login To View favourite</string>
    <string name="edit_order">Edit Order</string>
    <string name="address">Address:</string>
    <string name="add_order">Add Order</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_signup">Don`t have an account? SignUp.</string>
    <string name="enter_the_code_you_n_received_on_your_phone">Enter the code you  received on your phone</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="job">JOB</string>
    <string name="change_lang">Change Language</string>
    <string name="are_you_sure">\"are you sure you want to change the App language? \"</string>
    <string name="security">Security</string>
    <string name="check">check</string>
    <string name="enter_your_phone_number_reset_your_password">Enter Your Phone Number reset your password</string>
    <string name="phone_Incorrect">Phone Number is Incorrect</string>
    <string name="verify">Verify</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="reenter_new_password">Reenter New Password</string>
    <string name="submit">Submit</string>
    <string name="your_place_to_find_your_prefect_job">Your Place to find your prefect job</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>