<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    tools:context=".Activity.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/dismissButton"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/purple_500"
        android:fontFamily="casual"
        android:textSize="@dimen/_30ssp"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_45sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/phoneLayoutLogin"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:startIconDrawable="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneTietLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/phone_number"
            android:fontFamily="casual"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/passwordLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLayoutLogin"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTietLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/password"

            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/loginButton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="casual"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:onClick="loginUser"
        android:background="@drawable/button_background"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayoutLogin" />

    <TextView
        android:id="@+id/forgotPasswordTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="forgetPasswordActivity"
        android:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/signupTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_signup"
        android:onClick="signUpUserActivity"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextViewLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>