<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.worker.worker.ui.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_addOrderFragment"
            app:destination="@id/addOrderFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.worker.worker.ui.Favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.worker.worker.ui.History.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.worker.worker.ui.Settings.SettingsFragment"
        android:label="settings_fragment"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/addOrderFragment"
        android:name="com.worker.worker.ui.AddOrder.AddOrderFragment"
        android:label="fragment_add_order"
        tools:layout="@layout/fragment_add_order" >
        <action
            android:id="@+id/action_addOrderFragment_to_submitOrderFragment"
            app:destination="@id/submitOrderFragment" />
    </fragment>
    <fragment
        android:id="@+id/editOrderFragment"
        android:name="com.worker.worker.ui.EditOrder.EditOrderFragment"
        android:label="fragment_edit_order"
        tools:layout="@layout/fragment_edit_order" />
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.worker.worker.ui.OrderDetails.OrderDetailsFragment"
        android:label="fragment_order_details"
        tools:layout="@layout/fragment_order_details" >
        <action
            android:id="@+id/action_orderDetailsFragment_to_editOrderFragment"
            app:destination="@id/editOrderFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.worker.worker.ui.Profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/submitOrderFragment"
        android:name="com.worker.worker.ui.SubmitOrder.SubmitOrderFragment"
        android:label="fragment_submit_order"
        tools:layout="@layout/fragment_submit_order" >
        <argument
            android:name="order"
            app:argType="com.worker.worker.model.Order" />
    </fragment>
    <fragment
        android:id="@+id/viewProfileFragment"
        android:name="com.worker.worker.ui.ViewProfile.ViewProfileFragment"
        android:label="fragment_view_profile"
        tools:layout="@layout/fragment_view_profile" />
</navigation>